<resources>
    <string name="app_name">Notepad</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="website">Website</string>
    <string name="behzad_sayyad">Behzad Sayyad</string>
    <string name="_09126302271">09126302271</string>
    <string name="add_note">Add Note</string>
    <string name="show_all">Show All</string>
    <string name="setting">Setting</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="are_you_sure_to_exit">Are you sure to exit?</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="title">Title</string>
    <string name="description">description</string>
</resources>